# GoogleCloudPlatformAPI

./: .coverage  .gitignore  AGENTS.md  README.md  __init__.py  main.py  pyproject.toml  requirements.py  requirements.txt  run.sh  setup.py
.github/workflows/: ci.yml
GoogleCloudPlatform/: Analytics.py  BigQuery.py  CloudStorage.py  ServiceAccount.py  Utils.py  __init__.py
GoogleCloudPlatformAPI/: AdManager.py  Analytics.py  BigQuery.py  CloudStorage.py  Oauth.py  ServiceAccount.py  Utils.py  __init__.py
GoogleCloudPlatformAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_requirements.py
tests/: test_admanager.py  test_analytics.py  test_bigquery.py  test_bigquery_job_config.py  test_cloudstorage.py  test_oauth.py  test_utils.py
typings/GoogleCloudPlatformAPI/: AdManager.pyi  Analytics.pyi  BigQuery.pyi  CloudStorage.pyi  Oauth.pyi  Utils.pyi  __init__.pyi
