[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = 'GoogleCloudPlatformAPI'
version = '2.3.7'
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "google-api-python-client",
    "google-cloud-bigquery",
    "google-cloud-bigquery[pandas]",
    "google-cloud-storage",
    "googleads",
    "db-dtypes",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
    "pydocstyle",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-pydocstyle",
]

[tool.pydocstyle]
convention = "numpy"

[tool.pyright]

[tool.hatch.build.targets.wheel]
packages = ["GoogleCloudPlatformAPI"]

[tool.hatch.build.targets.sdist]
include = [
    "/GoogleCloudPlatformAPI",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/tests",
]
